welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var T: Array[Color]
  var T = new Array[Color](10)
  
}